--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "ccapture.js",
   "version": "1.0.6",
-  "description": "A library to capture canvas-based animations at a fixed framerate",
-  "main": "build/CCapture.all.min.js",
+  "description":
+    "A library to capture canvas-based animations at a fixed framerate",
+  "main": "src/CCapture.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,13 +11,9 @@
     "type": "git",
     "url": "git+https://github.com/spite/ccapture.js.git"
   },
-  "keywords": [
-    "capture",
-    "canvas",
-    "webgl",
-    "animation"
-  ],
-  "author": "Jaume Sanchez <the.spite@gmail.com> (https://www.clicktorelease.com)",
+  "keywords": ["capture", "canvas", "webgl", "animation"],
+  "author":
+    "Jaume Sanchez <the.spite@gmail.com> (https://www.clicktorelease.com)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/spite/ccapture.js/issues"
